Added a cleaner implementation of navigating through different menus, specifically: - Home to Calculate Servings - Home to View Recipe Book - Home to Add Recipe - Add Recipe to Add Ingredient (and vice-versa)
Implemented a save button in Add Ingredient which takes users back to the Add Recipe menu

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".HomeToCalculate" />
+        <activity android:name=".CalculateProportion"
+            android:parentActivityName = ".MainActivity"/>
+        <activity android:name=".RecipeBook"
+            android:parentActivityName = ".MainActivity"/>
+        <activity android:name=".AddRecipe"
+            android:parentActivityName = ".MainActivity"/>
+        <activity android:name=".AddIngredient"
+            android:parentActivityName = ".AddRecipe"/>
     </application>
 
 </manifest>
