--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,10 @@
             android:parentActivityName = ".MainActivity"/>
         <activity android:name=".AddIngredient"
             android:parentActivityName = ".AddRecipe"/>
+        <activity android:name=".AddRecipeSecond"
+            android:parentActivityName = ".MainActivity"/>
+        <activity android:name=".AddIngredientSecond"
+            android:parentActivityName = ".AddRecipeSecond"/>
     </application>
 
 </manifest>
